# ratatui-examples

./: .gitignore  flake.nix
block-example/: Cargo.toml  LICENSE
block-example/src/: main.rs
custom-widget-example/src/: main.rs
displaying-text-example/src/: main.rs
grid-layout/src/: main.rs
paragraph-example/: README.md  flake.nix
paragraph-example/src/: main.rs
popups-example/: Cargo.toml
popups-example/src/: main.rs
styling-text-example/src/: main.rs
