[package]
name = "ratatui-hello-world"
version = "0.1.0"
description = "An example generated using the hello-world template"
authors = ["ano333333 <ano333333github@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
derive_setters = "0.1.8"
lipsum = "0.9.1"
ratatui = "0.30.0"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
